# Product_parser

./: .env.docker.sample  .env.sample  Dockerfile  README.md  commands.txt  config.py  docker-compose.yml  main.py  pyproject.toml  utils.py  заметки.txt
Product_parser/: pyproject.toml
loading_content/: content_downloader.py  web_page_retriever.py
saving_content/: create_product_table_samokat.sql  db_saver.py
